Add confirm button to authorize_token template

--- a/piston/templates/piston/authorize_token.html
+++ b/piston/templates/piston/authorize_token.html
@@ -9,6 +9,7 @@
 		
         <form action="{% url piston.authentication.oauth_user_auth %}" method="POST">
             {{ form.as_table }}
+            <button type="submit">Confirm</button>
         </form>
 
 	</body>
